<resources>
    <string name="app_name">QED</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="coming_soon">Coming soon™</string>
    <string name="copied">Copied</string>
    <string name="delete">Delete</string>
    <string name="delete_error">Deletion failed</string>
    <string name="deleted">Deleted</string>
    <string name="empty" translatable="false"/>
    <string name="hits">%,d Hits</string>
    <string name="info">Details</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="range">%s - %s</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="save_error">Saving failed</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="undo">Undo</string>
    <string name="double_back_to_exit_toast">Press again to exit</string>
    <string name="logout_success">Logout successful</string>
    <string name="not_official">This app is not related to the Quod Erat Demonstrandum e.V. in any official way.</string>
    <string name="master_key_error">Password could not be saved.</string>
    <string name="account_type" translatable="false">eu.jonahbauer.qed.account_type</string>
    <string name="preferences_chat_name_key" translatable="false">chat.name</string>
    <string name="preferences_chat_recent_names_key" translatable="false">chat.recent_names</string>
    <string name="preferences_chat_channel_key" translatable="false">chat.channel</string>
    <string name="preferences_chat_recent_channels_key" translatable="false">chat.recent_channels</string>
    <string name="preferences_chat_color_key" translatable="false">chat.color</string>
    <string name="preferences_chat_sense_key" translatable="false">chat.show_sense</string>
    <string name="preferences_chat_public_id_key" translatable="false">chat.public_id</string>
    <string name="preferences_chat_linkify_key" translatable="false">chat.linkify</string>
    <string name="preferences_chat_katex_key" translatable="false">chat.katex</string>
    <string name="preferences_chat_delete_db_key" translatable="false">chat.delete_db</string>
    <string name="preferences_chat_colorful_key" translatable="false">chat.colorful</string>
    <string name="preferences_chat_db_max_result_key" translatable="false">chat.db_max_results</string>
    <string name="preferences_general_bug_report_key" translatable="false">general.bug_report</string>
    <string name="preferences_general_language_key" translatable="false">general.language</string>
    <string name="preferences_general_github_key" translatable="false">general.github</string>
    <string name="preferences_general_remember_me_key" translatable="false">general.remember_me</string>
    <string name="preferences_general_theme_key" translatable="false">general.theme</string>
    <string name="preferences_general_update_check_enabled_key" translatable="false">general.update_check.enabled</string>
    <string name="preferences_general_update_check_includes_prereleases_key" translatable="false">general.update_check.includes_prereleases</string>
    <string name="preferences_general_update_check_dont_suggest_key" translatable="false">general.update_check.dont_suggest</string>
    <string name="preferences_general_username_key" translatable="false">general.username</string>
    <string name="preferences_database_favorites_key" translatable="false">database.people.favorites</string>
    <string name="preferences_gallery_delete_thumbnails_key" translatable="false">gallery.delete_thumbnails</string>
    <string name="preferences_gallery_delete_images_key" translatable="false">gallery.delete_images</string>
    <string name="preferences_gallery_offline_mode_key" translatable="false">gallery.offline_mode</string>
    <string name="preferences_gallery_show_dir_key" translatable="false">gallery.show_dir</string>
    <string name="preferences_gallery_delete_db_key" translatable="false">gallery.delete_db</string>
    <string-array name="language_names" translatable="false">
        <item>@string/language_system</item>
        <item>@string/language_german</item>
        <item>@string/language_english</item>
    </string-array>
    <string-array name="language_codes" translatable="false">
        <item>SYSTEM</item>
        <item>GERMAN</item>
        <item>ENGLISH</item>
    </string-array>
    <string name="language_system">System</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_english" translatable="false">English</string>
    <string-array name="theme_names" translatable="false">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_workers_red</item>
    </string-array>
    <string-array name="theme_codes" translatable="false">
        <item>LIGHT</item>
        <item>DARK</item>
        <item>WORKERS_RED</item>
    </string-array>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_workers_red">Worker\'s Red</string>
    <string name="error">Error!</string>
    <string name="error_404">Requested resource could not be found.</string>
    <string name="error_empty">Empty</string>
    <string name="error_incomplete">An error occurred. Results might be incomplete.</string>
    <string name="error_login">Unable to log in.</string>
    <string name="error_network">A network error occurred. Please check your internet connection.</string>
    <string name="error_out_of_memory">Out of memory.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_user">Error in Layer 8</string>
    <string name="error_bad_link">Broken Link!</string>
    <string name="update_dialog_title">Update Available</string>
    <string name="update_dialog_message">A new version of the app is available: &lt;font face="monospace">%s&lt;/font></string>
    <string name="update_dialog_message_prerelease">A new beta version of the app is available: &lt;font face="monospace">%s&lt;/font></string>
    <string name="update_dialog_remind_later">Remind me later</string>
    <string name="update_dialog_show">Show</string>
    <string name="update_dialog_ignore">Ignore</string>
    <string name="transition_name_album" translatable="false">album_%d</string>
    <string name="transition_name_album_fragment" translatable="false">album_content</string>
    <string name="transition_name_event" translatable="false">event_%d</string>
    <string name="transition_name_event_database_fragment" translatable="false">event_database</string>
    <string name="transition_name_image_fragment_image" translatable="false">image_content_image</string>
    <string name="transition_name_image_thumbnail" translatable="false">image_thumb_%d</string>
    <string name="transition_name_person" translatable="false">person_%d</string>
    <string name="transition_name_person_database_fragment" translatable="false">event_database</string>
    <string name="transition_name_single_fragment" translatable="false">fragment_content</string>
    <string name="drawer_chat_heading">Chat</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_chat_log">Log</string>
    <string name="drawer_chat_db">Database</string>
    <string name="drawer_database_heading">Database</string>
    <string name="drawer_persons">Persons</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_gallery_heading">Gallery</string>
    <string name="drawer_gallery">Gallery</string>
    <string name="drawer_settings">@string/settings</string>
    <string name="drawer_logout">Sign Out</string>
    <string name="message_info">@string/info</string>
    <string name="message_copy">Copy</string>
    <string name="message_reply">Reply</string>
    <string name="log_dialog_mode_label">Mode</string>
    <string name="image_info">@string/info</string>
    <string name="image_open_with">Open With…</string>
    <string name="image_share">Share</string>
    <string name="image_copy_link">Copy Link</string>
    <string name="image_download_original">Download Original</string>
    <string name="title_fragment_settings">@string/settings</string>
    <string name="preferences_header_debug">Debug</string>
    <string name="preferences_header_general">General</string>
    <string name="preferences_general_group_general">General</string>
    <string name="preferences_general_github_title">GitHub Project</string>
    <string name="preferences_general_github_summary">https://github.com/jbb01/QED</string>
    <string name="preferences_general_bug_report_title">Bug Report</string>
    <string name="preferences_general_bug_report_summary">Please use the GitHub Issue Tracker for reporting bugs. Include as much information as possible (Android and app version, steps to reproduce, …).</string>
    <string name="preferences_general_language_title">Language</string>
    <string name="preferences_general_group_appearance">Appearance</string>
    <string name="preferences_general_theme_title">Theme</string>
    <string name="preferences_general_group_update_check">Update Check</string>
    <string name="preferences_general_update_check_enabled_title">Check for Updates</string>
    <string name="preferences_general_update_check_enabled_true_summary">You will be notified about new versions.</string>
    <string name="preferences_general_update_check_enabled_false_summary">You will not be notified about new versions.</string>
    <string name="preferences_general_update_check_includes_prereleases_title">Beta Releases</string>
    <string name="preferences_general_update_check_includes_prereleases_true_summary">You will receive notifications for new beta versions.</string>
    <string name="preferences_general_update_check_includes_prereleases_false_summary">You will only receive notifications for new release versions.</string>
    <string name="preferences_header_chat">Chat</string>
    <string name="preferences_chat_name_title">Name</string>
    <string name="preferences_chat_channel_title">Channel</string>
    <string name="preferences_chat_color_title">Color</string>
    <string name="preferences_chat_public_id_title">Public ID</string>
    <string name="preferences_chat_group_appearance">Appearance</string>
    <string name="preferences_chat_sense_title">Show Sense</string>
    <string name="preferences_chat_linkify_title">Show Links</string>
    <string name="preferences_chat_katex_title">KaTeX Rendering (Beta)</string>
    <string name="preferences_chat_colorful_title">Colorful Messages</string>
    <string name="preferences_chat_group_database">Chat Database</string>
    <string name="preferences_chat_db_max_result_title">Maximum Number of Search Results</string>
    <string name="preferences_chat_delete_db_title">Delete Chat Database</string>
    <string name="preferences_header_gallery">Gallery</string>
    <string name="preferences_gallery_group_fs">File System</string>
    <string name="preferences_gallery_delete_thumbnails">Delete saved thumbnails</string>
    <string name="preferences_gallery_delete_images">Delete saved pictures</string>
    <string name="preferences_gallery_offline_mode">Offline Mode</string>
    <string name="preferences_gallery_offline_mode_true_summary">No Pictures will be downloaded. Some features will only be available to a limited extent.</string>
    <string name="preferences_gallery_offline_mode_false_summary">All features are unrestricted available. Pictures will be downloaded as needed.</string>
    <string name="preferences_gallery_show_dir">Open storage directory</string>
    <string name="preferences_gallery_delete_db_title">Delete Gallery Database</string>
</resources>