<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/preferences_general_group_general">

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_general_github_key"
            android:title="@string/preferences_general_github_title"
            android:icon="@drawable/ic_settings_github"
            android:summary="@string/preferences_general_github_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jbb01/QED" />
        </Preference>

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_general_bug_report_key"
            android:title="@string/preferences_general_bug_report_title"
            android:summary="@string/preferences_general_bug_report_summary"
            android:icon="@drawable/ic_settings_bug_report" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jbb01/QED/issues/new"/>
        </Preference>

        <ListPreference
            android:key="@string/preferences_general_language_key"
            android:title="@string/preferences_general_language_title"
            android:icon="@drawable/ic_settings_language"
            android:entryValues="@array/language_codes"
            android:entries="@array/language_names"
            android:defaultValue="SYSTEM"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_general_group_appearance">
        <ListPreference
            android:key="@string/preferences_general_theme_key"
            android:title="@string/preferences_general_theme_title"
            android:icon="@drawable/ic_settings_theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_codes"
            android:defaultValue="LIGHT"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="general.update_check.category"
        app:title="@string/preferences_general_group_update_check">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preferences_general_update_check_enabled_key"
            android:title="@string/preferences_general_update_check_enabled_title"
            android:icon="@drawable/ic_settings_update_check_enabled"
            android:summaryOn="@string/preferences_general_update_check_enabled_true_summary"
            android:summaryOff="@string/preferences_general_update_check_enabled_false_summary"/>
        <SwitchPreference
            android:defaultValue="@string/preferences_general_update_check_includes_prerelease_default"
            android:dependency="@string/preferences_general_update_check_enabled_key"
            android:key="@string/preferences_general_update_check_includes_prereleases_key"
            android:title="@string/preferences_general_update_check_includes_prereleases_title"
            android:icon="@drawable/ic_settings_update_check_beta"
            android:summaryOn="@string/preferences_general_update_check_includes_prereleases_true_summary"
            android:summaryOff="@string/preferences_general_update_check_includes_prereleases_false_summary"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
