<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferences_header_general">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferences_chat_public_id_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_public_id_title"
            android:icon="@drawable/ic_settings_id"/>

        <EditTextPreference
            android:defaultValue="@null"
            android:inputType="text"
            android:key="@string/preferences_chat_name_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_name_title"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_settings_name" />

        <EditTextPreference
            android:defaultValue="@null"
            android:inputType="text"
            android:key="@string/preferences_chat_channel_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_channel_title"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_settings_channel" />

        <Preference
            android:icon="@drawable/ic_settings_colorful_messages"
            android:key="@string/preferences_chat_color_key"
            android:title="@string/preferences_chat_color_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_chat_group_appearance">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferences_chat_sense_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_sense_title"
            android:icon="@drawable/ic_settings_botblock" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preferences_chat_linkify_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_linkify_title"
            android:icon="@drawable/ic_settings_link" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferences_chat_katex_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_katex_title"
            android:icon="@drawable/ic_settings_math" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferences_chat_colorful_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_colorful_title"
            android:icon="@drawable/ic_settings_colorful_messages" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_chat_group_database">

        <com.jonahbauer.qed.layoutStuff.SeekBarPreference
            android:defaultValue="50000"
            android:key="@string/preferences_chat_db_max_result_key"
            android:singleLine="true"
            android:title="@string/preferences_chat_db_max_result_title"
            android:max="6"
            android:icon="@drawable/ic_settings_database_search"
            app:showSeekBarValue="true"
            app:externalValues="@array/chat_database_max_entries_values"
            app:externalValueStrings="@array/chat_database_max_entries_value_strings"
            app:updatesContinuously="true"/>
        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_chat_delete_db_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_chat_delete_db_title"
            android:icon="@drawable/ic_settings_delete_database" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
