<!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferences_header_general" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferences_gallery_offline_mode_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_gallery_offline_mode"
            android:icon="@drawable/ic_settings_offline_mode"
            android:summaryOn="@string/preferences_gallery_offline_mode_true_summary"
            android:summaryOff="@string/preferences_gallery_offline_mode_false_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_gallery_group_fs">
        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_gallery_show_dir_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_gallery_show_dir"
            android:icon="@drawable/ic_settings_show_gallery_dir"/>

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_gallery_delete_thumbnails_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_gallery_delete_thumbnails"
            android:icon="@drawable/ic_settings_delete_thumbnails"/>

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_gallery_delete_images_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_gallery_delete_images"
            android:icon="@drawable/ic_settings_delete_images" />

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_gallery_delete_db_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_gallery_delete_db_title"
            android:icon="@drawable/ic_settings_delete_database" />
    </PreferenceCategory>

</PreferenceScreen>
