<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preferences_gallery_offline_mode_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preferences_Gallery_offline_mode"
        android:icon="@drawable/ic_settings_offline_mode"
        android:summaryOn="@string/preferences_gallery_offline_mode_true_summary"
        android:summaryOff="@string/preferences_gallery_offline_mode_false_summary" />

    <Preference
        android:defaultValue="false"
        android:key="@string/preferences_gallery_show_dir_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preferences_gallery_show_dir"
        android:icon="@drawable/ic_settings_show_gallery_dir"/>

    <Preference
        android:defaultValue="false"
        android:key="@string/preferences_gallery_delete_thumbnails_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preferences_gallery_delete_thumbnails"
        android:icon="@drawable/ic_settings_delete_thumbnails"/>

    <Preference
        android:defaultValue="false"
        android:key="@string/preferences_gallery_delete_images_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preferences_gallery_delete_images"
        android:icon="@drawable/ic_settings_delete_images" />

</PreferenceScreen>
