<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/preferences_header_general">
        <!--
        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_general_clean_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_general_clean_title"
            android:icon="@drawable/ic_settings_delete_database" />
            -->

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_general_github_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_general_github_title"
            android:icon="@drawable/ic_settings_github"
            android:summary="@string/github_project"/>

        <Preference
            android:defaultValue="false"
            android:key="@string/preferences_general_bug_report_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_general_bug_report_title"
            android:summary="@string/preferences_general_bug_report_summary"
            android:icon="@drawable/ic_settings_bug_report" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
