<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/message_reply"
            android:icon="@drawable/ic_menu_reply"
            android:title="@string/message_reply"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/message_copy"
            android:icon="@drawable/ic_menu_copy"
            android:title="@string/message_copy"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/message_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/message_info"
            app:showAsAction="ifRoom"/>
    </group>
</menu>