<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="settings_header_general"
        android:fragment="com.jonahbauer.qed.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_general"
        android:title="@string/preferences_header_general" />

    <Preference
        android:key="settings_header_chat"
        android:fragment="com.jonahbauer.qed.activities.SettingsActivity$ChatPreferenceFragment"
        android:icon="@drawable/ic_settings_chat"
        android:title="@string/preferences_header_chat" />

    <Preference
        android:key="settings_header_gallery"
        android:fragment="com.jonahbauer.qed.activities.SettingsActivity$GalleryPreferenceFragment"
        android:icon="@drawable/ic_settings_gallery"
        android:title="@string/preferences_header_gallery" />

</androidx.preference.PreferenceScreen>
