<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.LogDialogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/log_dialog_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/log_dialog_mode_spinner"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/log_dialog_mode_spinner"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/log_dialog_mode_label" />

        <Spinner
            android:id="@+id/log_dialog_mode_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/log_dialog_mode_label"
            android:entries="@array/modes" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/log_dialog_fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/log_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:theme="@style/AppTheme"
            android:onClick="ok"/>

        <Button
            android:id="@+id/log_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_toStartOf="@+id/log_dialog_ok"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:theme="@style/AppTheme"
            android:onClick="cancel" />
    </RelativeLayout>


</LinearLayout>